--- a/src/index.css
+++ b/src/index.css
@@ -43,11 +43,16 @@ body {
   transform: translateX(-100%);
 }
 
-
-.singleOrder-table td{
+.singleOrder-table td {
   text-align: left;
 }
 
-.singleOrder-table th{
+.singleOrder-table th {
   text-align: left;
+}
+
+.full-size-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* This ensures the image covers the entire div without distortion */
 }
